[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/big_strength_water_flower/big_strength_water_flower_adult/big_strength_water_flower.gd" type="Script" id=1]
[ext_resource path="res://other/strength_water_flower_light_control.tres" type="Animation" id=2]
[ext_resource path="res://other/strength_flower_light.png" type="Texture" id=3]
[ext_resource path="res://entities/big_strength_water_flower/big_strength_water_flower_adult/sprite/big_strength_water_flower.png" type="Texture" id=4]
[ext_resource path="res://other/fluffi_face.tres" type="SpriteFrames" id=5]
[ext_resource path="res://entities/fluffi_node_base.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 30.0

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[node name="big_strength_water_flower" type="StaticBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -99 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite"]
position = Vector2( 9, 71 )
frames = ExtResource( 5 )
animation = "eating"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="info_panel" type="TextureButton" parent="."]
margin_left = -43.0
margin_top = -173.0
margin_right = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="light" type="Sprite" parent="."]
modulate = Color( 0.0196078, 0.262745, 0.298039, 1 )
material = SubResource( 2 )
position = Vector2( 0, -112 )
scale = Vector2( 1.12418, 1.12418 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/strength_water_flower_light_control = ExtResource( 2 )

[node name="fluffi_node_base" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="info_panel" to="." method="_on_water_button_pressed"]
