[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/big_strength_water_flower/big_strength_water_flower_adult/big_strength_water_flower.gd" type="Script" id=1]
[ext_resource path="res://entities/big_strength_water_flower/big_strength_water_flower_adult/sprite/big_strength_water_flower.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 74.0

[sub_resource type="CircleShape2D" id=2]
radius = 150.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open_thirsty",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "closed_thirsty",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 39.1831

[node name="big_strength_water_flower" type="StaticBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 1 )

[node name="life_space" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="life_area" type="CollisionShape2D" parent="life_space"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="area" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="flower_sprite" type="AnimatedSprite" parent="."]
position = Vector2( -17, -143 )
frames = SubResource( 3 )
animation = "open_thirsty"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="pearl_generation" type="Timer" parent="."]
autostart = true

[node name="water_button" type="TextureButton" parent="."]
margin_left = -43.0
margin_top = -173.0
margin_right = 44.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="pearl_generation" to="." method="_on_pearl_generation_timeout"]
[connection signal="pressed" from="water_button" to="." method="_on_water_button_pressed"]
